--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,4 +6,5 @@ RoninOS v2.1.0 Change log
 - Removed autologin regarding physical access
 - Simplified ronin-setup.sh script (no need to change entries in the sudoers file)
 - Cleanup (teardown .sh files)
+- Improved installation service to wait for network interface to be up and have an uplink to the router
 - Credits: dammkewl, BTCxZelko, s2l1, Numbers, KYC3, WittyBull
